Use 0.9 beta ElasticMQ
- Use 0.9 beta to allow queues to be created on startup

--- a/elasticmq.conf
+++ b/elasticmq.conf
@@ -6,7 +6,7 @@ include classpath("application.conf")
 node-address {
     protocol = http
     // this is specifically for docker
-    host = 192.168.59.103
+    host = elasticmq
     port = 9324
     context-path = ""
 }
