Use a separate config file for customizations
PLATFORM-1136

--- a/elasticmq.conf
+++ b/elasticmq.conf
@@ -1,6 +1,7 @@
 // https://github.com/adamw/elasticmq#installation-stand-alone
 
 include classpath("application.conf")
+include file("/elasticmq/custom.conf")
 
 // What is the outside visible address of this ElasticMQ node (used by rest-sqs)
 node-address {
